kdeservicemenus-kanotix (0.3.2) unstable; urgency=low
  * remove cdbs auto-update feature.
  * remove knoppix virtual packages.
  * clean up debian/control.
  * bump compat level to 5.

--- a/debian/control
+++ b/debian/control
@@ -2,15 +2,13 @@ Source: kdeservicemenus-kanotix
 Section: kde
 Priority: optional
 Maintainer: Stefan Lippers-Hollmann <s.l-h@gmx.de>
-Build-Depends-Indep: cdbs (>= 0.4.23-1.1), build-essential, debhelper (>= 4.1.0)
+Build-Depends-Indep: cdbs (>= 0.4.23-1.1), debhelper (>= 5.0.0)
 Standards-Version: 3.6.2
 
 Package: kdeservicemenus-kanotix
 Architecture: all
 Depends: libjpeg-progs, imagemagick, zip, dialog, xdialog, kanotix-su
 Suggests: kde, kmail, konqueror, kate
-Provides: kdeservicemenus-knoppix
-Conflicts: kdeservicemenus-knoppix
 Description: several kde service menus
  Until now included: 
  Edit as root,
