--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.7.2
 
 Package: kdeservicemenus-sidux
 Architecture: all
-Depends: libjpeg-progs, imagemagick, zip, dialog, xdialog, su-me
+Depends: libjpeg-progs, imagemagick, zip, dialog, xdialog, su-me, procps
 Conflicts: kdeservicemenus-kanotix
 Suggests: kde, kmail, konqueror, kate
 Description: several kde service menus
