--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,8 @@ Priority: extra
 Maintainer: Stefan Lippers-Hollmann <s.l-h@gmx.de>
 Build-Depends: cdbs, debhelper (>= 5)
 Standards-Version: 3.7.2
+XS-Vcs-Svn: svn://svn.berlios.de/fullstory/kdeservicemenus-sidux/trunk
+XS-Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/kdeservicemenus-sidux/trunk/
 
 Package: kdeservicemenus-sidux
 Architecture: all
