--- a/edit_as_su.desktop
+++ b/edit_as_su.desktop
@@ -4,9 +4,11 @@ Actions=Editassu
 
 [Desktop Action Editassu]
 Name=Edit as Root
+Name[de]=Als root bearbeiten
+Name[ru]=как суперползьзователь
 Name[it]=Edita come Root
 Name[fr]=Editer en tant que Root
 Name[es]=Editar como Root
-Name[de]=Als root bearbeiten
+
 Icon=kfm
 Exec=su-me "kwrite" "%U"
