--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: kdeservicemenus-sidux
 Section: kde
 Priority: extra
 Maintainer: Stefan Lippers-Hollmann <s.l-h@gmx.de>
-Build-Depends: cdbs, debhelper (>= 6)
+Build-Depends: debhelper (>= 7)
 Standards-Version: 3.7.3
 Vcs-Svn: svn://svn.berlios.de/fullstory/kdeservicemenus-sidux/trunk
 Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/kdeservicemenus-sidux/trunk/
