edit_as_su.desktop: use kwrite and not kedit, since package depend on kate and kate provides kwrite...

--- a/edit_as_su.desktop
+++ b/edit_as_su.desktop
@@ -11,4 +11,4 @@ Name[fr]=Editer en tant que Root
 Name[es]=Editar como Root
 
 Icon=kfm
-Exec=su-to-root -X -c "/usr/bin/kedit %U"
+Exec=su-to-root -X -c "/usr/bin/kwrite %U"
