--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,9 @@ Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/kdeservicemenus-sidux/trunk/
 
 Package: kdeservicemenus-sidux
 Architecture: all
-Depends: menu, kate
+Depends: ${misc:Depends},
+         menu,
+         kate
 Description: several KDE service menus
  Until now included: 
  - Edit as root
